--- a/_posts/2019-05-01-Hanoi.markdown
+++ b/_posts/2019-05-01-Hanoi.markdown
@@ -2,8 +2,8 @@
 layout: post
 title: "Hanoi"
 date: 2019-05-01
-description: Peintures murales
-image: /assets/images/mosh.jpg
+description: Peinture murale
+image: /assets/images/vietnam/mur1.jpg
 author: Lea Delescluse
 tags:
   - Peinture murale
